# learning-tkinter

./: README.md  pyproject.toml
src/: __init__.py
src/intro/: first_app.py  greet_app.py  greet_app_with_grids.py
src/milestone_project/: distance_converter.py
src/milestone_project/chat_app/: app.py  handle_messages.py
src/milestone_project/chat_app/frames/: message_display_frame.py  message_sending_frame.py
src/milestone_project/pomodoro_timer/: app.py  windows.py
src/milestone_project/pomodoro_timer/frames/: settings.py  timer.py
src/milestone_project/snake_game/: snake_game.py
src/oops/: distance_converter_with_oops.py  user_input_frame.py
src/themes/: intro.py
src/widgets/: checkbox.py  combobox.py  label.py  listbox.py  radio_button.py  scale.py  scrollbar.py  separator.py  spinbox.py  text.py
